HOMME, Compose: Redo CMake handling of HOMME_ENABLE_COMPOSE.
Previously, I used add_definitions. This doesn't generalize to the SCREAM
build. Instead, add a cmakedefine to the various config.h.cmake.in files in
HOMME.

--- a/components/homme/src/preqx/config.h.cmake.in
+++ b/components/homme/src/preqx/config.h.cmake.in
@@ -69,3 +69,6 @@
 /* When doing BFB testing, we occasionally must use modified code. */
 /* Use this flag to protect such code. */
 #cmakedefine HOMMEXX_BFB_TESTING
+
+/* Detect whether COMPOSE passive tracer transport is enabled */
+#cmakedefine HOMME_ENABLE_COMPOSE
