--- a/components/homme/src/sweqx/config.h.cmake.in
+++ b/components/homme/src/sweqx/config.h.cmake.in
@@ -32,3 +32,6 @@
 
 /* Quadruple-precision */
 #cmakedefine01 HOMME_QUAD_PREC
+
+/* Detect whether COMPOSE passive tracer transport is enabled */
+#cmakedefine HOMME_ENABLE_COMPOSE
