--- a/components/homme/src/swim/config.h.cmake.in
+++ b/components/homme/src/swim/config.h.cmake.in
@@ -34,3 +34,6 @@
 
 /* Quadruple-precision */
 #cmakedefine01 HOMME_QUAD_PREC
+
+/* Detect whether COMPOSE passive tracer transport is enabled */
+#cmakedefine HOMME_ENABLE_COMPOSE
